--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,4 +1,4 @@
-{{- if .extra_tools -}}
+{{- if .extra_tools -}} # extra_tools
 [".linkerd2/bin/linkerd"]
   type = "file"
   url = "https://github.com/linkerd/linkerd2/releases/download/edge-{{ .tools.linkerd2.version }}/linkerd2-cli-edge-{{ .tools.linkerd2.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
@@ -7,29 +7,36 @@
   type = "file"
   url = '{{ gitHubLatestReleaseAssetURL "linkerd/linkerd-smi" (printf "linkerd-smi-*-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
   executable = true
-[".local/bin/bw"]
-  type = "archive-file"
-  url = "https://github.com/bitwarden/clients/releases/download/cli-v{{ .tools.bw.version }}/bw-{{ .chezmoi.os }}-{{ .tools.bw.version }}.zip"
-  path = "bw"
-  executable = true
 [".local/bin/bws"]
   type = "archive-file"
-  url = "https://github.com/bitwarden/sdk-sm/releases/download/bws-v{{ .tools.bws.version }}/bws-x86_64-unknown-{{ .chezmoi.os }}-gnu-{{ .tools.bws.version }}.zip"
   path = "bws"
   executable = true
+{{ if eq .chezmoi.os "darwin" -}}
+  url = 'https://github.com/bitwarden/sdk-sm/releases/download/bws-v{{ .tools.bws.version }}/bws-aarch64-apple-{{ .chezmoi.os }}-{{ .tools.bws.version }}.zip'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = 'https://github.com/bitwarden/sdk-sm/releases/download/bws-v{{ .tools.bws.version }}/bws-x86_64-unknown-{{ .chezmoi.os }}-gnu-{{ .tools.bws.version }}.zip'
+{{ end -}}
 [".local/bin/hugo"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
   path = "hugo"
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_*_*%s-universal.tar.gz" .chezmoi.os) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
+{{ end -}}
 [".local/bin"]
   type = "archive"
-  url = '{{ gitHubLatestReleaseAssetURL "nushell/nushell" (printf "nu-*-x86_64-unknown-%s-gnu*" .chezmoi.os) }}'
   exact = false
   stripComponents = 1
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "nushell/nushell" (printf "nu-*-aarch64-apple-%s.tar.gz" .chezmoi.os) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "nushell/nushell" (printf "nu-*-x86_64-unknown-%s-gnu*" .chezmoi.os) }}'
+{{ end -}}
 [".local/bin/autok3s"]
   type = "file"
-  url = '{{ gitHubLatestReleaseAssetURL "cnrancher/autok3s" (printf "autok3s_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
   executable = true
+  url = '{{ gitHubLatestReleaseAssetURL "cnrancher/autok3s" (printf "autok3s_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
 [".local/bin/cloudflared"]
   type = "file"
   url = "https://github.com/cloudflare/cloudflared/releases/download/{{ .tools.cloudflared.version }}/cloudflared-{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
@@ -42,20 +49,28 @@
   type = "file"
   url = '{{ gitHubLatestReleaseAssetURL "argoproj/argo-cd" (printf "argocd-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
   executable = true
+{{ if eq .chezmoi.os "linux" -}}
 [".local/bin/kopia"]
   type = "archive-file"
   url = "https://github.com/kopia/kopia/releases/download/v{{ .tools.kopia.version }}/kopia-{{ .tools.kopia.version }}-{{ .chezmoi.os }}-x64.tar.gz"
   executable = true
   path = "kopia-{{ .tools.kopia.version }}-{{ .chezmoi.os }}-x64/kopia"
+{{ end -}}
 [".local/bin/git-credential-keepassxc"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "Frederick888/git-credential-keepassxc" (printf "*ubuntu*full*") }}'
   path = "git-credential-keepassxc"
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "Frederick888/git-credential-keepassxc" (printf "*macos*full*") }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "Frederick888/git-credential-keepassxc" (printf "*ubuntu*full*") }}'
 {{ end -}}
+{{ end -}} # extra_tools
+{{ if eq .chezmoi.os "linux" -}}
 [".local/bin/jq"]
   type = "file"
   url = '{{ gitHubLatestReleaseAssetURL "jqlang/jq" (printf "jq-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
   executable = true
+{{ end -}}
 [".local/bin/terraform"]
   type = "archive-file"
   url = "https://releases.hashicorp.com/terraform/{{ .tools.terraform.version }}/terraform_{{ .tools.terraform.version }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.zip"
@@ -84,9 +99,13 @@
   executable = true
 [".local/bin/k9s"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "derailed/k9s" (printf "k9s_Linux_%s*.tar.gz" .chezmoi.arch) }}'
   executable = true
   path = "k9s"
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "derailed/k9s" (printf "k9s_Darwin_%s*.tar.gz" .chezmoi.arch) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "derailed/k9s" (printf "k9s_Linux_%s*.tar.gz" .chezmoi.arch) }}'
+{{ end -}}
 [".local/bin/age"]
   type = "archive-file"
   url = "https://github.com/FiloSottile/age/releases/download/v{{ .tools.age.version }}/age-v{{ .tools.age.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}.tar.gz"
@@ -114,36 +133,43 @@
   url = "https://releases.hashicorp.com/vagrant/{{ .tools.vagrant.version }}/vagrant_{{ .tools.vagrant.version }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.zip"
   path = "vagrant"
   executable = true
+{{ if eq .chezmoi.os "linux" -}}
 [".local/bin/rclone"]
   type = "archive-file"
   url = "https://downloads.rclone.org/v{{ .tools.rclone.version }}/rclone-v{{ .tools.rclone.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}.zip"
   path = "rclone-v{{ .tools.rclone.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}/rclone"
   executable = true
+{{ end -}}
 [".local/bin/docker-compose"]
   type = "file"
-  url = '{{ gitHubLatestReleaseAssetURL "docker/compose" (printf "docker-compose-%s-x86_64*" .chezmoi.os ) }}'
   executable = true
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "docker/compose" (printf "docker-compose-%s-aarch64*" .chezmoi.os ) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "docker/compose" (printf "docker-compose-%s-x86_64*" .chezmoi.os ) }}'
+{{ end -}}
 [".local/bin/zoxide"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "ajeetdsouza/zoxide" (printf "*x86_64-unknown-%s-musl*" .chezmoi.os) }}'
   executable = true
   path = "zoxide"
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "ajeetdsouza/zoxide" (printf "*aarch64-apple-%s.tar.gz" .chezmoi.os) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "ajeetdsouza/zoxide" (printf "*x86_64-unknown-%s-musl*" .chezmoi.os) }}'
+{{ end -}}
 [".local/bin/helm"]
   type = "archive-file"
   url = "https://get.helm.sh/helm-v{{ .tools.helm.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}.tar.gz"
   executable = true
   path = "{{ .chezmoi.os }}-{{ .chezmoi.arch }}/helm"
-{{ if eq .chezmoi.os "darwin" -}}
-  type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "jesseduffield/lazygit" (printf "*Darwin_x86_64*" ) }}'
-  executable = true
-  path = "lazygit"
-{{ else if eq .chezmoi.os "linux" -}}
 [".local/bin/lazygit"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "jesseduffield/lazygit" (printf "*Linux_x86_64*" ) }}'
   executable = true
   path = "lazygit"
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "jesseduffield/lazygit" (printf "*Darwin_x86_64*" ) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "jesseduffield/lazygit" (printf "*Linux_x86_64*" ) }}'
 {{ end -}}
 
 [".local/bin/flux"]
@@ -154,9 +180,14 @@
 [".local/bin/bat"]
   type = "archive-file"
   {{ $batVersion := (gitHubLatestRelease "sharkdp/bat").TagName }}
+  executable = true
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "sharkdp/bat" (printf "*aarch64-apple-%s*" .chezmoi.os ) }}'
+  path = "bat-{{ $batVersion }}-aarch64-apple-{{ .chezmoi.os }}/bat"
+{{ else if eq .chezmoi.os "linux" -}}
   url = '{{ gitHubLatestReleaseAssetURL "sharkdp/bat" (printf "*x86_64-unknown-%s-gnu*" .chezmoi.os ) }}'
   path = "bat-{{ $batVersion }}-x86_64-unknown-{{ .chezmoi.os }}-gnu/bat"
-  executable = true
+{{ end -}}
 [".local/bin/fzf"]
   type = "archive-file"
   url = '{{ gitHubLatestReleaseAssetURL "junegunn/fzf" (printf "*%s_%s*" .chezmoi.os .chezmoi.arch) }}'
@@ -164,13 +195,24 @@
 [".local/bin/fd"]
   type = "archive-file"
   {{ $fdVersion := (gitHubLatestRelease "sharkdp/fd").TagName }}
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "sharkdp/fd" (printf "fd-*-aarch64-apple-%s*" .chezmoi.os) }}'
+  path = "fd-{{ $fdVersion }}-aarch64-apple-{{ .chezmoi.os }}/fd"
+{{ else if eq .chezmoi.os "linux" -}}
   url = '{{ gitHubLatestReleaseAssetURL "sharkdp/fd" (printf "fd-*-x86_64-unknown-%s-gnu*" .chezmoi.os) }}'
   path = "fd-{{ $fdVersion }}-x86_64-unknown-{{ .chezmoi.os }}-gnu/fd"
+{{ end -}}
 [".local/bin/rg"]
   type = "archive-file"
   {{ $rgVersion := (gitHubLatestRelease "BurntSushi/ripgrep").TagName }}
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "BurntSushi/ripgrep" (printf "*-aarch64-apple-%s*" .chezmoi.os ) }}'
+  path = "ripgrep-{{ $rgVersion }}-aarch64-apple-{{ .chezmoi.os }}/rg"
+{{ else if eq .chezmoi.os "linux" -}}
   url = '{{ gitHubLatestReleaseAssetURL "BurntSushi/ripgrep" (printf "*x86_64-unknown-%s-musl*" .chezmoi.os ) }}'
   path = "ripgrep-{{ $rgVersion }}-x86_64-unknown-{{ .chezmoi.os }}-musl/rg"
+{{ end -}}
+{{ if eq .chezmoi.os "linux" -}}
 [".local/bin/speedtest"]
   type = "archive-file"
   url = "https://install.speedtest.net/app/cli/ookla-speedtest-1.2.0-linux-x86_64.tgz"
@@ -181,6 +223,7 @@
   url = '{{ gitHubLatestReleaseAssetURL "eza-community/eza" (printf "eza_x86_64-unknown-%s-gnu.zip" .chezmoi.os) }}'
   path = "eza"
   executable = true
+{{ end -}}
 [".tmux.conf"]
   type = "file"
   url = 'https://raw.githubusercontent.com/gpakosz/.tmux/refs/heads/master/.tmux.conf'
@@ -191,9 +234,14 @@
   stripComponents = 1
 [".local/"]
   type = "archive"
-  url = '{{ gitHubLatestReleaseAssetURL "neovim/neovim" (printf "nvim-*%s-x86_64.tar.gz" .chezmoi.os) }}'
   exact = false
   stripComponents = 1
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "neovim/neovim" (printf "nvim-macos-*%s.tar.gz" .chezmoi.arch) }}'
+{{ else if eq .chezmoi.os "linux" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "neovim/neovim" (printf "nvim-*%s-x86_64.tar.gz" .chezmoi.os) }}'
+{{ end -}}
+{{ if eq .chezmoi.os "linux" -}}
 [".local/bin/rbw"]
   type = "archive-file"
   url = '{{ gitHubLatestReleaseAssetURL "doy/rbw" (printf "rbw_*_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
@@ -204,17 +252,28 @@
   url = '{{ gitHubLatestReleaseAssetURL "doy/rbw" (printf "rbw_*_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
   path = "rbw-agent"
   executable = true
+{{ end -}}
 # curl -LsSf https://astral.sh/uv/install.sh | sh
 [".local/bin/uv"]
   type = "archive-file"
+  executable = true
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "astral-sh/uv" (printf "uv-aarch64-apple-%s.tar.gz" .chezmoi.os) }}'
+  path = "uv-aarch64-apple-{{ .chezmoi.os }}/uv"
+{{ else if eq .chezmoi.os "linux" -}}
   url = '{{ gitHubLatestReleaseAssetURL "astral-sh/uv" (printf "uv-x86_64-unknown-%s-gnu.tar.gz" .chezmoi.os) }}'
   path = "uv-x86_64-unknown-{{ .chezmoi.os }}-gnu/uv"
-  executable = true
+{{ end -}}
 [".local/bin/uvx"]
   type = "archive-file"
+  executable = true
+{{ if eq .chezmoi.os "darwin" -}}
+  url = '{{ gitHubLatestReleaseAssetURL "astral-sh/uv" (printf "uv-aarch64-apple-%s.tar.gz" .chezmoi.os) }}'
+  path = "uv-aarch64-apple-{{ .chezmoi.os }}/uvx"
+{{ else if eq .chezmoi.os "linux" -}}
   url = '{{ gitHubLatestReleaseAssetURL "astral-sh/uv" (printf "uv-x86_64-unknown-%s-gnu.tar.gz" .chezmoi.os) }}'
   path = "uv-x86_64-unknown-{{ .chezmoi.os }}-gnu/uvx"
-  executable = true
+{{ end -}}
 [".local/go"]
   type = "archive"
   url = "https://go.dev/dl/go{{ .tools.go.version }}.{{ .chezmoi.os }}-{{ .chezmoi.arch }}.tar.gz"
