Fixed startship format

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -123,5 +123,4 @@ format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [kubernetes]
 disabled = false
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+format = '[[ $symbol ($context) ] '
