--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -123,4 +123,4 @@ format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [kubernetes]
 disabled = false
-format = '[[ $symbol ($context) ] '
+format = '[ $symbol ($context) ] '
