--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -6,6 +6,7 @@ LICENSE
 test/
 login-with-password-manager
 Brewfile
-{{- if ne .chezmoi.os "darwin" -}}
-private_Library/private_Application Support/private_rbw/symlink_config.json
+# https://www.chezmoi.io/user-guide/manage-machine-to-machine-differences/#use-completely-different-dotfiles-on-different-machines
+{{- if eq .chezmoi.os "linux" -}}
+private_Library/*
 {{- end -}}
