--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -7,6 +7,6 @@ test/
 login-with-password-manager
 Brewfile
 # https://www.chezmoi.io/user-guide/manage-machine-to-machine-differences/#use-completely-different-dotfiles-on-different-machines
-{{- if eq .chezmoi.os "linux" -}}
+{{- if ne .chezmoi.os "linux" -}}
 private_Library/*
 {{- end -}}
