* fixed vault binary path

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -352,6 +352,6 @@ url = "https://github.com/pyenv/pyenv.git"
 {{ $vaultVersionRaw := (gitHubLatestRelease "hashicorp/vault").TagName }}
 {{ $vaultVersion := trimPrefix "v" $vaultVersionRaw }}
   url = 'https://releases.hashicorp.com/vault/{{ $vaultVersion }}/vault_{{ $vaultVersion }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.zip'
-  path = "vault_{{ $vaultVersion }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}/vault"
+  path = "vault"
 
 # ex: ts=4 sw=4 et filetype=toml
