--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -13,4 +13,5 @@ Library/*
 {{- end -}}
 {{- if not (stat (joinPath (env "HOME") ".config/chezmoi/key.txt")) -}}
 dot_config/sops/age/encrypted_private_keys.txt.age
+.config/sops/age/encrypted_private_keys.txt.age
 {{- end -}}
