--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -12,6 +12,5 @@ private_Library/*
 Library/*
 {{- end -}}
 {{- if not (stat (joinPath (env "HOME") ".config/chezmoi/key.txt")) -}}
-dot_config/sops/age/encrypted_private_keys.txt.age
-.config/sops/age/encrypted_private_keys.txt.age
+**/sops/age/*.age
 {{- end -}}
