* minor mac fixes

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -5,15 +5,17 @@ packages:
     - 'bash-completion'
     - 'btop'
     - 'coreutils'
+    - 'docker'
     - 'fontconfig'
+    - 'font-meslo-lg-nerd-font'
     - 'htop'
+    - 'iproute2mac'
     - 'jq'
     - 'pinentry-mac'
     - 'pinentry'
     - 'tcl-tk'
     - 'tmux'
     casks:
-    - 'font-source-code-pro'
     - 'google-chrome'
     - 'iterm2'
     - 'visual-studio-code'
