--- a/dot_config/colima/k3s/colima.yaml
+++ b/dot_config/colima/k3s/colima.yaml
@@ -6,7 +6,7 @@ cpu: 4
 # NOTE: value can only be increased after virtual machine has been created.
 #
 # Default: 100
-disk: 50
+disk: 60
 
 # Size of the memory in GiB to be allocated to the virtual machine.
 # Default: 2
@@ -16,7 +16,7 @@ memory: 8
 #
 # NOTE: value cannot be changed after virtual machine is created.
 # Default: host
-arch: aarch64
+arch: host
 
 # Container runtime to be used (docker, containerd).
 #
@@ -27,19 +27,19 @@ runtime: docker
 # Set custom hostname for the virtual machine.
 # Default: colima
 #          colima-profile_name for other profiles
-hostname: colima
+hostname: colima-k3s
 
 # Kubernetes configuration for the virtual machine.
 kubernetes:
   # Enable kubernetes.
   # Default: false
   enabled: true
-
+  
   # Kubernetes version to use.
   # This needs to exactly match a k3s version https://github.com/k3s-io/k3s/releases
   # Default: latest stable release
-  version: v1.33.1+k3s1
-
+  version: v1.33.2+k3s1
+  
   # Additional args to pass to k3s https://docs.k3s.io/cli/server
   # Default: traefik is disabled
   k3sArgs:
@@ -66,15 +66,17 @@ network:
   # NOTE: this is currently macOS only and ignored on Linux.
   # Default: false
   address: false
-
+  
   # Custom DNS resolvers for the virtual machine.
   #
   # EXAMPLE
   # dns: [8.8.8.8, 1.1.1.1]
   #
   # Default: []
-  dns: []
-
+  dns:
+    - 1.1.1.1
+    - 8.8.8.8
+  
   # DNS hostnames to resolve to custom targets using the internal resolver.
   # This setting has no effect if a custom DNS resolver list is supplied above.
   # It does not configure the /etc/hosts files of any machine or container.
@@ -85,7 +87,7 @@ network:
   #   example.com: 1.2.3.4
   dnsHosts:
     host.docker.internal: host.lima.internal
-
+  
   # Replicate host IP addresses in the VM. This enables port forwarding to specific
   # host IP addresses.
   #   e.g. `docker run --port 10.0.1.2:8080:8080 alpine` would only forward to the
@@ -128,7 +130,7 @@ docker: {}
 #
 # NOTE: value cannot be changed after virtual machine is created.
 # Default: qemu
-vmType: vz
+vmType: qemu
 
 # Utilise rosetta for amd64 emulation (requires m1 mac and vmType `vz`)
 # Default: false
@@ -159,7 +161,7 @@ mountInotify: true
 # Options available for host emulation can be checked with: `qemu-system-$(arch) -cpu help`.
 # Instructions are also supported by appending to the cpu type e.g. "qemu64,+ssse3".
 # Default: host
-cpuType: ""
+cpuType: host
 
 # Custom provision scripts for the virtual machine.
 # Provisioning scripts are executed on startup and therefore needs to be idempotent.
