--- a/dot_config/colima/k3s/colima.yaml
+++ b/dot_config/colima/k3s/colima.yaml
@@ -138,7 +138,7 @@ rosetta: false
 
 # Enable nested virtualization for the virtual machine (requires m3 mac and vmType `vz`)
 # Default: false
-nestedVirtualization: false
+nestedVirtualization: true
 
 # Volume mount driver for the virtual machine (virtiofs, 9p, sshfs).
 #
