--- a/dot_config/colima/k3s/colima.yaml
+++ b/dot_config/colima/k3s/colima.yaml
@@ -38,7 +38,7 @@ kubernetes:
   # Kubernetes version to use.
   # This needs to exactly match a k3s version https://github.com/k3s-io/k3s/releases
   # Default: latest stable release
-  version: v1.33.2+k3s1
+  version: v1.33.3+k3s1
   
   # Additional args to pass to k3s https://docs.k3s.io/cli/server
   # Default: traefik is disabled
@@ -65,7 +65,7 @@ network:
   # Assign reachable IP address to the virtual machine.
   # NOTE: this is currently macOS only and ignored on Linux.
   # Default: false
-  address: true
+  address: false
   
   # Custom DNS resolvers for the virtual machine.
   #
