--- a/.github/workflows/full-workflow.yaml
+++ b/.github/workflows/full-workflow.yaml
@@ -8,6 +8,9 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout code
         uses: 'actions/checkout@v5'
